--- a/package.json
+++ b/package.json
@@ -64,7 +64,11 @@
     "fs": "latest",
     "path": "latest",
     "markdown-to-jsx": "latest",
-    "gray-matter": "latest"
+    "gray-matter": "latest",
+    "react-markdown": "^9.0.0",
+    "rehype-raw": "^7.0.2",
+    "rehype-slug": "^6.0.0",
+    "remark-gfm": "^4.0.0"
   },
   "devDependencies": {
     "@types/node": "^22",
