--- a/package.json
+++ b/package.json
@@ -64,7 +64,11 @@
     "fs": "latest",
     "path": "latest",
     "markdown-to-jsx": "latest",
-    "gray-matter": "latest"
+    "gray-matter": "latest",
+    "react-markdown": "^10.1.0",
+    "rehype-raw": "^7.0.0",
+    "rehype-slug": "^6.0.0",
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
     "@types/node": "^22",
@@ -72,6 +76,7 @@
     "@types/react-dom": "^19",
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5"
+    "typescript": "^5",
+    "@tailwindcss/typography": "^0.5.16"
   }
 }
